# nuclear-plant-monitoring-system

./: CMakeLists.txt  README.md
include/: DataProcessor.h  IDataProcessor.h  ISecurityManager.h  ISensorReader.h  ModbusHandler.h  PlantMonitor.h  SecurityManager.h  SocketManager.h
src/: SecurityManager.cpp  main.cpp
tests/: CMakeLists.txt  SecurityManagerTest.cpp
web/: dashboard.js  index.html  styles.css
